--- a/package.json
+++ b/package.json
@@ -17,27 +17,34 @@
     "/oclif.manifest.json"
   ],
   "scripts": {
-    "build": "shx rm -rf dist && tsc -b",
+    "build": "shx rm -rf dist && tsc",
     "lint": "eslint . --ext .ts --config .eslintrc",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "kombi": "./bin/run"
   },
   "dependencies": {
-    "@oclif/core": "^1",
+    "@oclif/core": "^1.5.3",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1",
-    "@types/inquirer": "^8.2.0",
     "chalk": "^5.0.0",
-    "inquirer": "^8.2.0"
+    "fs-extra": "^10.0.1",
+    "inquirer": "^8.2.0",
+    "ncp": "^2.0.0",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "@oclif/test": "^2",
     "@types/chai": "^4",
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.2.0",
     "@types/mocha": "^9.0.0",
+    "@types/ncp": "^2.0.5",
     "@types/node": "^16.9.4",
+    "@types/require-dir": "^1.0.2",
     "chai": "^4",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
