--- a/package.json
+++ b/package.json
@@ -24,43 +24,42 @@
     "prepack": "oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
+    "prepare": "husky install",
     "kombi": "./bin/run"
   },
   "dependencies": {
-    "@oclif/core": "^1.5.3",
-    "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.0.1",
-    "chalk": "^5.0.0",
+    "@oclif/core": "^1.6.0",
+    "@oclif/plugin-help": "^5.1.12",
+    "@oclif/plugin-plugins": "^2.1.0",
+    "chalk": "^5.0.1",
     "degit": "^2.8.4",
     "fs-extra": "^10.0.1",
-    "inquirer": "^8.2.0",
-    "ncp": "^2.0.0",
+    "inquirer": "^8.2.1",
     "replace-in-file": "^6.3.2",
-    "require-dir": "^1.2.0",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "@oclif/test": "^2",
-    "@types/chai": "^4",
+    "@oclif/test": "^2.1.0",
+    "@types/chai": "^4.3.0",
     "@types/degit": "^2.8.3",
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.2.0",
     "@types/mocha": "^9.0.0",
-    "@types/ncp": "^2.0.5",
     "@types/node": "^16.9.4",
-    "@types/require-dir": "^1.0.2",
     "@types/shelljs": "^0.8.11",
-    "chai": "^4",
+    "chai": "^4.3.6",
     "eslint": "^7.32.0",
-    "eslint-config-oclif": "^4",
+    "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.2",
     "globby": "^11",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.5",
     "mocha": "^9",
-    "oclif": "^2",
+    "oclif": "^2.6.0",
     "shx": "^0.3.3",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "4.4.3"
   },
   "oclif": {
     "bin": "kombi",
