--- a/templates/template-react-spa/tsconfig.json
+++ b/templates/template-react-spa/tsconfig.json
@@ -1,24 +1,24 @@
 {
-  "extends": "ts-config-single-spa",
-  "files": ["src/<%= normalizedMfeName %>.tsx"],
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.test*"],
+  "extends": "./tsconfig.paths.json",
+  "include": ["src"],
   "compilerOptions": {
-    "jsx": "react",
+    "target": "ES2021",
     "lib": ["dom", "dom.iterable", "esnext", "ES2021"],
+    "allowJs": true,
+    "jsx": "react",
     "module": "esnext",
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "baseUrl": "src",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
-    "target": "ES2021"
+    "strict": true
   }
 }
