--- a/templates/template-react-spa/.eslintrc
+++ b/templates/template-react-spa/.eslintrc
@@ -6,13 +6,14 @@
     "node": true
   },
   "extends": [
+    "plugin:react/recommended",
     "airbnb",
     "airbnb/hooks",
-    "prettier",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
-  "plugins": ["react", "prettier", "react-hooks", "import-helpers"],
+  "plugins": ["react", "react-hooks", "prettier", "import-helpers"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -28,6 +29,9 @@
     }
   },
   "rules": {
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "prettier/prettier": ["error"],
     "no-use-before-define": 0,
     "space-before-function-paren": 0,
