--- a/templates/template-react-spa/package.json
+++ b/templates/template-react-spa/package.json
@@ -6,7 +6,12 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint src",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -15,6 +20,7 @@
     "axios": "^0.26.1",
     "effector": "^20.11.5",
     "effector-react": "^20.6.0",
+    "miragejs": "^0.1.43",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
@@ -32,21 +38,22 @@
     "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.11",
     "@types/jest": "^27.0.1",
-    "@types/node": "^14.14.5",
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-root-import": "^6.6.0",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "enzyme": "^3.11.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
