--- a/templates/template-react-mfe/package.json
+++ b/templates/template-react-mfe/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
+    "axios": "^0.26.1",
     "effector": "^20.11.5",
     "effector-react": "^20.6.0",
     "react": "^17.0.2",
