Update spa for a good start

--- a/templates/template-react-spa/.eslintrc
+++ b/templates/template-react-spa/.eslintrc
@@ -89,6 +89,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "max-params": ["error", 3],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "error"
+    "@typescript-eslint/no-shadow": "error",
+    "@typescript-eslint/bans-ignore": 0
   }
 }
