--- a/templates/template-react-spa/package.json
+++ b/templates/template-react-spa/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "jest --watch",
+    "coverage": "jest --coverage",
     "eject": "react-scripts eject",
     "lint": "npx eslint src",
     "lint:fix": "npm run lint -- --fix",
@@ -66,7 +67,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-cli": "^27.0.6",
     "jest-junit": "^12.0.0",
@@ -74,11 +74,7 @@
     "pretty-quick": "^3.1.1",
     "react-app-rewired": "^2.2.1",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "webpack-merge": "^5.8.0"
+    "typescript": "^4.3.5"
   },
   "browserslist": {
     "production": [
