add language in envrioment

--- a/templates/template-react-spa-2.0/.env
+++ b/templates/template-react-spa-2.0/.env
@@ -1,4 +1,5 @@
 VITE_APP_TITLE=Template - Title
 VITE_APP_DESCRIPTION=Template - Description
+VITE_APP_LANGUAGE=pt-BR
 
 VITE_API_URL=https://api.io/api
