--- a/templates/template-react-spa-2.0/.env.sandbox
+++ b/templates/template-react-spa-2.0/.env.sandbox
@@ -1,4 +1,5 @@
 VITE_APP_TITLE=SANDBOX Template - Title
 VITE_APP_DESCRIPTION=SANDBOX Template - Description
+VITE_APP_LANGUAGE=pt-BR
 
 VITE_API_URL=/api
