update template spa 2.0

--- a/templates/template-react-spa-2.0/.eslintrc
+++ b/templates/template-react-spa-2.0/.eslintrc
@@ -50,7 +50,7 @@
       "error",
       {
         "devDependencies": [
-          "server/**/*.ts",
+          "mock/**/*.ts",
           "config/**/*.ts",
           "*.config.ts",
           "**/*.test.ts",
