--- a/templates/template-react-spa-2.0/.gitignore
+++ b/templates/template-react-spa-2.0/.gitignore
@@ -18,7 +18,7 @@ coverage
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
-!.vscode/css_custom_data.json
+!.vscode/launch.json
 .idea
 .DS_Store
 *.suo
