--- a/templates/template-react-spa-2.0/.vscode/extensions.json
+++ b/templates/template-react-spa-2.0/.vscode/extensions.json
@@ -2,7 +2,6 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "editorconfig.editorconfig",
-    "ZixuanChen.vitest-explorer"
+    "editorconfig.editorconfig"
   ]
 }
