--- a/templates/template-react-spa-2.0/package.json
+++ b/templates/template-react-spa-2.0/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "format": "prettier --write src/**/*.ts{,x}",
@@ -18,10 +19,10 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
-    "@mui/material": "^5.6.1",
+    "@mui/material": "^5.6.2",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
-    "effector": "^22.2.0",
+    "effector": "^22.3.0",
     "effector-react": "^22.0.6",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -29,24 +30,23 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
-    "react-router-dom": "6"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@faker-js/faker": "^6.1.2",
+    "@faker-js/faker": "^6.2.0",
     "@types/enzyme": "^3.10.12",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vitejs/plugin-react": "^1.3.1",
+    "@vitest/ui": "^0.9.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "babel-plugin-formatjs": "^10.3.19",
-    "c8": "^7.11.0",
+    "c8": "^7.11.2",
     "enzyme": "^3.11.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -60,16 +60,15 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.4.0",
     "miragejs": "^0.1.43",
     "prettier": "^2.6.2",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
+    "vite": "^2.9.5",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-pwa": "^0.11.13",
+    "vite-plugin-pwa": "^0.12.0",
     "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.9.2",
-    "vitest-sonar-reporter": "^0.1.1",
+    "vitest": "^0.9.4",
     "workbox-build": "^6.5.3",
     "workbox-window": "^6.5.3"
   }
