--- a/templates/template-react-spa-2.0/.env.development
+++ b/templates/template-react-spa-2.0/.env.development
@@ -1,5 +1,5 @@
 VITE_APP_TITLE=DEV Template - Title
 VITE_APP_DESCRIPTION=DEV Template - Description
-VITE_APP_LANGUAGE=pt-BR
+VITE_APP_FALLBACK_LANGUAGE=pt-BR
 
 VITE_API_URL=http://localhost:5000/api
