--- a/templates/template-react-spa-2.0/.eslintrc
+++ b/templates/template-react-spa-2.0/.eslintrc
@@ -50,7 +50,7 @@
       "error",
       {
         "devDependencies": [
-          "mock/**/*.ts",
+          "mocks/**/*.ts",
           "config/**/*.ts",
           "*.config.ts",
           "**/*.test.ts",
