--- a/templates/template-react-spa-2.0/tsconfig.paths.json
+++ b/templates/template-react-spa-2.0/tsconfig.paths.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "~/*": ["*"]
+      "~/*": ["*"],
+      "~mocks": ["../mocks"]
     }
   }
 }
