--- a/templates/template-flutter/pubspec.yaml
+++ b/templates/template-flutter/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  flutter_localizations:
+    sdk: flutter
   # Architecture
   flutter_modular: ^4.5.1+1
   provider: ^6.0.2
@@ -32,13 +32,15 @@ dev_dependencies:
   # Test tools
   mocktail: ^0.3.0
   faker: ^2.0.0
+  modular_test: ^1.0.1+2
   # Code generators
   modular_codegen: ^3.0.4
   mobx_codegen: ^2.0.4
   build_runner: ^2.1.8
 
   flutter_lints: ^1.0.0
-  modular_test: ^1.0.1+2
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lang/
