--- a/templates/template-flutter/pubspec.yaml
+++ b/templates/template-flutter/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   # Architecture
   flutter_modular: ^4.5.1+1
-  provider: ^6.0.2
+  equatable: ^2.0.3
   # State management
   mobx: ^2.0.7
   flutter_mobx: ^2.0.5
