--- a/templates/template-react-spa-cra/package.json
+++ b/templates/template-react-spa-cra/package.json
@@ -7,7 +7,6 @@
     "build": "react-app-rewired build",
     "test": "jest --watch",
     "coverage": "jest --coverage",
-    "eject": "react-scripts eject",
     "lint": "npx eslint src",
     "lint:fix": "npm run lint -- --fix",
     "prettier": "npx prettier src --check",
@@ -20,14 +19,16 @@
     "@mui/material": "^5.4.3",
     "axios": "^0.26.1",
     "customize-cra": "^1.0.0",
-    "effector": "^20.11.5",
-    "effector-react": "^20.6.0",
-    "miragejs": "^0.1.43",
+    "date-fns": "^2.28.0",
+    "effector": "^22.3.0",
+    "effector-react": "^22.0.6",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-intl": "^5.24.6",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0"
+    "react-i18next": "^11.16.7",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -35,24 +36,20 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.0.0",
-    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.11",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "@vitejs/plugin-react": "^1.0.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "babel-jest": "^27.0.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-root-import": "^6.6.0",
-    "concurrently": "^6.2.1",
-    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -62,7 +59,6 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-helpers": "^1.2.1",
-    "eslint-plugin-import-order": "^2.1.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
@@ -74,7 +70,7 @@
     "pretty-quick": "^3.1.1",
     "react-app-rewired": "^2.2.1",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.3"
   },
   "browserslist": {
     "production": [
