--- a/templates/template-flutter/pubspec.yaml
+++ b/templates/template-flutter/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   dartz: ^0.10.1
   # Responsivity
   flutter_screenutil: ^5.4.0+1
+  hive_flutter: ^1.1.0
+  flutter_svg: ^1.0.3
+  json_serializable: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +42,7 @@ dev_dependencies:
   build_runner: ^2.1.8
 
   flutter_lints: ^1.0.0
+  hive_generator: ^1.1.2
 
 flutter:
   uses-material-design: true
