--- a/templates/template-react-spa-cra/.env.development
+++ b/templates/template-react-spa-cra/.env.development
@@ -1,6 +1,2 @@
 NODE_ENV=development
-API_HOST=
-VITE_APP_TITLE=Template - Title
-VITE_APP_DESCRIPTION=Template - Description
-
-VITE_API_URL=https://api.io/api
+REACT_APP_API_HOST=http://localhost:3000/api
