--- a/templates/template-react-spa-cra/package.json
+++ b/templates/template-react-spa-cra/package.json
@@ -54,7 +54,6 @@
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
@@ -66,6 +65,7 @@
     "jest": "^27.0.6",
     "jest-cli": "^27.0.6",
     "jest-junit": "^12.0.0",
+    "miragejs": "^0.1.45",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "react-app-rewired": "^2.2.1",
